--- a/inventory/templates/inventory/pop_detail.html
+++ b/inventory/templates/inventory/pop_detail.html
@@ -1,36 +1,9 @@
 {% extends 'inventory/base_inet.html' %}
 {% block content %}
-<style type="text/css">
-  h4 {
-    font-size: 16px;
-    font-weight: bold;
-    color: #444444;
-  }
-  table {
-    border-spacing: 0px;
-    border-left: 2px solid #7e7e7e;
-    padding-top: 0px;
-    padding-left: 15px;
-    background-color: #FFFFFF;
-  }
-  .addbutton {
-    color: #fff;
-    background-color: #FF9900;
-    border: none;
-    height: 32px;
-    font-family: 'Oswald', sans-serif;
-    float: right;
-  }
-  .delbutton {
-    color: #fff;
-    background-color: #FF0000;
-    border: none;
-    height: 32px;
-    font-family: 'Oswald', sans-serif;
-    float: right;
-  }
-</style>
+
 {% if user.is_authenticated %}
+  {% for group in  request.user.groups.all %}
+    {%  if 'noc' == group.name %}
 <script>
 function delconfirm() {
   var user_choice = window.confirm('Вы уверены?');
@@ -41,103 +14,150 @@ function delconfirm() {
   }
 }
 </script>
-<input class="delbutton" type="button" value="УДАЛИТЬ" onclick="delconfirm()">
-<input class="addbutton" type="button" value="РЕДАКТИРОВАТЬ" onclick="location.href='{% url 'pop_edit' pk=pop.pk %}'">
+    {% endif %}
+  {% endfor %}
 {% endif %}
 
-<table width='100%'>
-  <tr style="height: 30px;">
-    <td width="15%"><h4>Подключение:</h4></td>
-    <td><h4>{{ pop.title }}</h4></td>
+<table class="table table-sm table-borderless table-hover" width='100%'>
+  <thead>
+  <tr>
+    <th>Подключение:</th>
+    <th>{{ pop.title }}</th>
+    <th>
+      {% if user.is_authenticated %}
+        {% for group in  request.user.groups.all %}
+          {%  if 'noc' == group.name %}
+      <input class="btn btn-dark btn-sm" style="float: right; height: 32px; width: 92px; margin-top: 10px;" type="button" value="РЕДАКТИР." onclick="location.href='{% url 'pop_edit' pk=pop.pk %}'">
+      <input class="btn btn-danger btn-sm" style="float: right; height: 32px; width: 92px; margin-top: 10px; margin-right: 10px;" type="button" value="УДАЛИТЬ" onclick="delconfirm()">
+          {% endif %}
+        {% endfor %}
+      {% endif %}
+    </th>
   </tr>
-  <tr style="height: 30px;">
-    <td><b>Адрес:</b></td>
+</thead>
+  <tr>
+    <td>Адрес:</td>
     <td>{{ pop.address|linebreaksbr }}</td>
   </tr>
-  <tr style="height: 30px;">
-    <td><b>Контакты:</b></td>
+  <tr>
+    <td>Контакты:</td>
     <td>{{ pop.contacts|linebreaksbr }}</td>
   </tr>
-  <tr style="height: 30px;">
-    <td><b>Менеджер:</b></td>
+  <tr>
+    <td>Менеджер:</td>
     <td>{{ pop.manager|linebreaksbr }}</td>
   </tr>
-  <tr style="height: 30px;">
-    <td><b>Ширина канала:</b></td>
+  <tr>
+    <td>Ширина канала:</td>
     <td>{{ pop.bandwidth|linebreaksbr }}</td>
   </tr>
-  <tr style="height: 30px;">
-    <td><b>Комментарий:</b></td>
+  <tr>
+    <td>Комментарий:</td>
     <td>{{ pop.comments|linebreaksbr }}<td>
   </tr>
 </table>
-{% if user.is_authenticated %}
-<input class="addbutton" type="button" value="РЕДАКТИРОВАТЬ" onclick="location.href='{% url 'pop_devices' pk=pop.pk %}'">
-{% endif %}
-<table width='100%'>
-  <tr style="height: 20px;">
-    <td width="15%"><h4>Оборудование:</h4></td>
+
+<table class="table table-sm table-borderless table-hover" width='100%'>
+  <thead>
+  <tr>
+    <th>Оборудование</th>
+    <th></th>
+    <th>
+      {% if user.is_authenticated %}
+        {% for group in  request.user.groups.all %}
+          {%  if 'noc' == group.name %}
+      <input class="btn btn-dark btn-sm" style="float: right; height: 32px; width: 92px; margin-top: 10px;" type="button" value="РЕДАКТИР." onclick="location.href='{% url 'pop_devices' pk=pop.pk %}'">
+          {% endif %}
+        {% endfor %}
+      {% endif %}
+    </th>
   </tr>
-  <tr style="height: 30px;">
-    <td><b>Модель:</b></td>
-    <td><b>Имя:</b></td>
-    <td><b>Прочее:</b></td>
+  </thead>
+  <tr class="table-active">
+    <td width='30%'>Модель:</td>
+    <td>Имя:</td>
+    <td>Прочее:</td>
   </tr>
   {% for d in device %}
-  <tr style="height: 30px;">
-    <td><b>{{d.vendor}} {{d.model}}</b></td>
+  <tr>
+    <td width='30%'>{{d.vendor}} {{d.model}}</td>
     <td><a href="{% url 'device_detail' pk=d.pk %}">{{ d }}</a</td>
     <td><a href = "telnet://{{d.ipaddress}}">connect</td>
   </tr>
   {% endfor %}
 </table>
 
-{% if user.is_authenticated %}
-<input class="addbutton" type="button" value="РЕДАКТИРОВАТЬ" onclick="location.href='{% url 'pop_ipv4networks' pk=pop.pk %}'">
-{% else %}
-<p>
-{% endif %}
-<table width='100%'>
-  <tr style="height: 20px;">
-    <td width="15%"><h4>Сети IPv4:</h4></td>
+<table class="table table-sm table-borderless table-hover" width='100%'>
+  <thead>
+  <tr>
+    <th>Сети IPv4</th>
+    <th></th>
+    <th>
+      {% if user.is_authenticated %}
+        {% for group in  request.user.groups.all %}
+          {%  if 'noc' == group.name %}
+          <input class="btn btn-dark btn-sm" style="float: right; height: 32px; width: 92px; margin-top: 10px;" type="button" value="РЕДАКТИР." onclick="location.href='{% url 'pop_ipv4networks' pk=pop.pk %}'">
+          {% endif %}
+        {% endfor %}
+      {% endif %}
+    </th>
   </tr>
-  <tr style="height: 30px;">
-    <td><b>Сеть:</b></td>
-    <td><b>Описание:</b></td>
+</thead>
+  <tr class="table-active">
+    <td width='30%'>Сеть:</td>
+    <td>Описание:</td>
+    <td></td>
   </tr>
   {% for n in network %}
-  <tr style="height: 30px;">
-    <td><a href="{% url 'ipv4_detail' pk=n.pk %}">{{ n }}</a</td>
+  <tr>
+    <td width='30%'><a href="{% url 'ipv4_detail' pk=n.pk %}">{{ n }}</a</td>
     <td>{{ n.comment }}</td>
+    <td></td>
   </tr>
   {% endfor %}
 </table>
 
-{% if user.is_authenticated %}
-<input class="addbutton" type="button" value="РЕДАКТИРОВАТЬ" onclick="location.href='{% url 'pop_upstreams' pk=pop.pk %}'">
-{% endif %}
-<table width='100%'>
-  <tr style="height: 30px;">
-    <td width="15%"><h4>Upstreams:</h4></td>
+<table class="table table-sm table-borderless table-hover" width='100%'>
+  <thead>
+  <tr>
+    <th>Upstreams:</th>
+    <th>
+      {% if user.is_authenticated %}
+        {% for group in  request.user.groups.all %}
+          {%  if 'noc' == group.name %}
+      <input class="btn btn-dark btn-sm" style="float: right; height: 32px; width: 92px; margin-top: 10px;" type="button" value="РЕДАКТИР." onclick="location.href='{% url 'pop_upstreams' pk=pop.pk %}'">
+          {% endif %}
+        {% endfor %}
+      {% endif %}
+    </th>
   </tr>
+  </thead>
   {% for i in upstream %}
-  <tr style="height: 30px;">
-    <td><b>Узел:</b></td>
-    <td><a href="{% url 'core_detail' pk=i.pk %}">{{ i }}</a</td>
+  <tr>
+    <td width='30%'>Узел:</td>
+    <td><a href="{% url 'core_detail' pk=i.pk %}">{{ i }}</a></td>
   </tr>
   {% endfor %}
 </table>
 
-{% if user.is_authenticated %}
-<input class="addbutton" type="button" value="РЕДАКТИРОВАТЬ" onclick="location.href='{% url 'pop_downstreams' pk=pop.pk %}'">
-{% endif %}
-<table width='100%'>
-  <tr style="height: 30px;">
-    <td width="15%"><h4>Downstreams:</h4></td>
+<table class="table table-sm table-borderless table-hover" width='100%'>
+  <thead>
+  <tr>
+    <th>Downstreams:</th>
+    <th>
+      {% if user.is_authenticated %}
+        {% for group in  request.user.groups.all %}
+          {%  if 'noc' == group.name %}
+      <input class="btn btn-dark btn-sm" style="float: right; height: 32px; width: 92px; margin-top: 10px;" type="button" value="РЕДАКТИР." onclick="location.href='{% url 'pop_downstreams' pk=pop.pk %}'">
+          {% endif %}
+        {% endfor %}
+      {% endif %}
+    </th>
   </tr>
+</thead>
   {% for x in downstream %}
-  <tr style="height: 30px;">
-    <td><b>Клиент:</b></td>
+  <tr>
+    <td width='30%'>Клиент:</td>
     <td><a href="{% url 'customer_detail' pk=x.pk %}">{{ x }}</a</td>
   </tr>
   {% endfor %}
