--- a/inventory/templates/inventory/customer_detail.html
+++ b/inventory/templates/inventory/customer_detail.html
@@ -1,37 +1,9 @@
 {% extends 'inventory/base_inet.html' %}
 {% block content %}
-<style type="text/css">
-  h4 {
-    font-size: 16px;
-    font-weight: bold;
-    color: #444444;
-  }
-  table {
-    border-spacing: 0px;
-    border-left: 2px solid #7e7e7e;
-    padding-top: 0px;
-    padding-left: 15px;
-    background-color: #FFFFFF;
-  }
-  .addbutton {
-    color: #fff;
-    background-color: #FF9900;
-    border: none;
-    height: 32px;
-    font-family: 'Oswald', sans-serif;
-    float: right;
-  }
-  .delbutton {
-    color: #fff;
-    background-color: #FF0000;
-    border: none;
-    height: 32px;
-    font-family: 'Oswald', sans-serif;
-    float: right;
-  }
-</style>
 
 {% if user.is_authenticated %}
+  {% for group in  request.user.groups.all %}
+    {%  if 'noc' == group.name %}
 <script>
 function delconfirm() {
   var user_choice = window.confirm('Вы уверены?');
@@ -42,84 +14,118 @@ function delconfirm() {
   }
 }
 </script>
-
-<input class="delbutton" type="button" value="УДАЛИТЬ" onclick="delconfirm()">
-<input class="addbutton" type="button" value="РЕДАКТИРОВАТЬ" onclick="location.href='{% url 'customer_edit' pk=customer.pk %}'">
+    {% endif %}
+  {% endfor %}
 {% endif %}
 
-<table width='100%'>
-  <tr style="height: 30px;">
-    <td width="15%"><h4>Клиент:</h4></td>
-    <td><h4>{{ customer.title }}</h4></td>
+<table class="table table-sm table-borderless table-hover" width='100%'>
+  <thead>
+  <tr>
+    <th>Клиент:</th>
+    <th>{{ customer.title }}</th>
+    <th>
+      {% if user.is_authenticated %}
+        {% for group in  request.user.groups.all %}
+          {%  if 'noc' == group.name %}
+      <input class="btn btn-dark btn-sm" style="float: right; height: 32px; width: 92px; margin-top: 10px;" type="button" value="РЕДАКТИР." onclick="location.href='{% url 'customer_edit' pk=customer.pk %}'">
+      <input class="btn btn-danger btn-sm" style="float: right; height: 32px; width: 92px; margin-top: 10px; margin-right: 10px;" type="button" value="УДАЛИТЬ" onclick="delconfirm()">
+          {% endif %}
+        {% endfor %}
+      {% endif %}
+    </th>
   </tr>
-  <tr style="height: 30px;">
-    <td><b>Адрес:</b></td>
+</thead>
+  <tr>
+    <td>Адрес:</td>
     <td>{{ customer.address|linebreaksbr }}</td>
   </tr>
-  <tr style="height: 30px;">
-    <td><b>Контакты:</b></td>
+  <tr>
+    <td>Контакты:</td>
     <td>{{ customer.contacts|linebreaksbr }}</td>
   </tr>
-  <tr style="height: 30px;">
-    <td><b>Менеджер:</b></td>
+  <tr>
+    <td>Менеджер:</td>
     <td>{{ customer.manager|linebreaksbr }}</td>
   </tr>
-  <tr style="height: 30px;">
-    <td><b>Комментарий:</b></td>
+  <tr>
+    <td>Комментарий:</td>
     <td>{{ customer.comments|linebreaksbr }}</td>
   </tr>
 </table>
 
-{% if user.is_authenticated %}
-<input class="addbutton" type="button" value="РЕДАКТИРОВАТЬ" onclick="location.href='{% url 'customer_upstreams' pk=customer.pk %}'">
-{% endif %}
-<table width='100%'>
-  <tr style="height: 30px;">
-    <td width="15%"><h4>Upstreams:</h4></td>
+<table class="table table-sm table-borderless table-hover" width='100%'>
+  <thead>
+  <tr>
+    <th>Upstreams</th>
+    <th>
+      {% if user.is_authenticated %}
+        {% for group in  request.user.groups.all %}
+          {%  if 'noc' == group.name %}
+      <input class="btn btn-dark btn-sm" style="float: right; height: 32px; width: 92px; margin-top: 10px;" type="button" value="РЕДАКТИР." onclick="location.href='{% url 'customer_upstreams' pk=customer.pk %}'">
+          {% endif %}
+        {% endfor %}
+      {% endif %}
+    </th>
   </tr>
+</thead>
   {% for i in upstream %}
-  <tr style="height: 30px;">
-    <td><b>Подключение:</b></td>
+  <tr>
+    <td width='30%'>Подключение:</td>
     <td><a href="{% url 'pop_detail' pk=i.pk %}">{{ i }}</a</td>
   </tr>
   {% endfor %}
 </table>
 
-{% if user.is_authenticated %}
-<input class="addbutton" type="button" value="РЕДАКТИРОВАТЬ" onclick="location.href='{% url 'customer_ipv4networks' pk=customer.pk %}'">
-{% else %}
-<p>
-{% endif %}
-<table width='100%'>
-  <tr style="height: 20px;">
-    <td width="15%"><h4>Сети IPv4:</h4></td>
+<table class="table table-sm table-borderless table-hover" width='100%'>
+  <thead>
+  <tr>
+    <th>Сети IPv4</th>
+    <th>
+      {% if user.is_authenticated %}
+        {% for group in  request.user.groups.all %}
+          {%  if 'noc' == group.name %}
+      <input class="btn btn-dark btn-sm" style="float: right; height: 32px; width: 92px; margin-top: 10px;" type="button" value="РЕДАКТИР." onclick="location.href='{% url 'customer_ipv4networks' pk=customer.pk %}'">
+          {% endif %}
+        {% endfor %}
+      {% endif %}
+    </th>
   </tr>
-  <tr style="height: 30px;">
-    <td><b>Сеть:</b></td>
-    <td><b>Описание:</b></td>
+</thead>
+  <tr class="table-active">
+    <td width='30%'>Сеть:</td>
+    <td>Описание:</td>
   </tr>
   {% for n in network %}
   <tr style="height: 30px;">
-    <td><a href="{% url 'ipv4_detail' pk=n.pk %}">{{ n }}</a</td>
+    <td width='30%'><a href="{% url 'ipv4_detail' pk=n.pk %}">{{ n }}</a</td>
     <td>{{ n.comment }}</td>
   </tr>
   {% endfor %}
 </table>
 
-{% if user.is_authenticated %}
-<input class="addbutton" type="button" value="РЕДАКТИРОВАТЬ" onclick="location.href='{% url 'customer_connection' pk=customer.pk %}'">
-{% endif %}
-<table width='100%'>
-  <tr style="height: 30px;">
-    <td width="15%"><h4>Подключение:</h4></td>
+<table class="table table-sm table-borderless table-hover" width='100%'>
+  <thead>
+  <tr>
+    <th>Подключение:</th>
+    <th></th>
+    <th>
+      {% if user.is_authenticated %}
+        {% for group in  request.user.groups.all %}
+          {%  if 'noc' == group.name %}
+      <input class="btn btn-dark btn-sm" style="float: right; height: 32px; width: 92px; margin-top: 10px;" type="button" value="РЕДАКТИР." onclick="location.href='{% url 'customer_connection' pk=customer.pk %}'">
+          {% endif %}
+        {% endfor %}
+      {% endif %}
+    </th>
   </tr>
-  <tr style="height: 30px;">
-    <td><b>Коммутатор:</b></td>
-    <td><b>Vlan:</b></td>
-    <td><b>Полоса:</b></td>
+  </thead>
+  <tr class="table-active">
+    <td width='30%'>Коммутатор:</td>
+    <td>Vlan:</td>
+    <td>Полоса:</td>
   </tr>
-  <tr style="height: 30px;">
-    <td>{{ customer.switch|linebreaksbr }}</td>
+  <tr>
+    <td width='30%'>{{ customer.switch|linebreaksbr }}</td>
     <td>{{ customer.vlans|linebreaksbr }}</td>
     <td>{{ customer.bandwidth|linebreaksbr }}</td>
   </tr>
