--- a/inventory/templates/inventory/ipv4_list.html
+++ b/inventory/templates/inventory/ipv4_list.html
@@ -1,68 +1,49 @@
 {% extends 'inventory/base_ipam.html' %}
 {% block content %}
-<style type="text/css">
-  h4 a:visited {
-    color: #444444;
-  }
-  h4 a:hover {
-    text-decoration: underline;
-    color: #444444;
-  }
-  table {
-    border-spacing: 0px;
-    border-left: 2px solid #7e7e7e;
-    padding-top: 0px;
-    padding-bottom: 0px;
-    padding-left: 15px;
-    background-color: #FFFFFF;
-  }
-  .addbutton {
-    color: #fff;
-    background-color: #FF9900;
-    border: none;
-    height: 32px;
-    width: 72px;
-    font-family: 'Oswald', sans-serif;
-    float: right;
-  }
-  .filterbutton {
-    color: #fff;
-    background-color: #999999;
-    border: none;
-    height: 32px;
-    width: 72px;
-    font-family: 'Oswald', sans-serif;
-    float: right;
-  }
-</style>
 
-{% if user.is_authenticated %}
-<input class="addbutton" type="button" value="ДОБАВИТЬ" onclick="location.href='{% url 'ipv4_new' %}'">
-{% endif %}
-<table width='100%'>
-  <tr style="height: 30px;">
+<table class="table table-sm table-borderless table-hover" width='100%'>
+  <thead>
+    <tr>
+    <th>IP-сеть</th>
+    <th>Статус</th>
+    <th>Сегмент</th>
+    <th>Комментарий</th>
+    <th>Подключение</th>
+    <th>
+      {% if user.is_authenticated %}
+        {% for group in  request.user.groups.all %}
+          {%  if 'noc' == group.name %}
+            <input class="btn btn-dark btn-sm" style="float: right; height: 32px; width: 92px; margin-top: 10px" type="button" value="ДОБАВИТЬ" onclick="location.href='{% url 'ipv4_new' %}'">
+          {% endif %}
+        {% endfor %}
+      {% endif %}
+    </th>
+    </tr>
+  </thead>
+  <tr>
     <td>
       <form method="POST">{% csrf_token %}
       {{ filter.form.as_p }}
     </td>
     <td></td>
     <td></td>
+    <td></td>
     <td>
-      <button class="filterbutton" type="submit">ФИЛЬТР</button>
+      <button class="btn btn-light btn-sm" style="height: 32px; width: 92px;" type="submit">ФИЛЬТР</button>
     </td>
   </tr>
-<tr style="height: 30px;">
-<td><b>IP-сеть</b></td>
-<td><b>Статус</b></td>
-<td><b>Комментарий</b></td>
-<td><b>Подключение</b></td>
-</tr>
 
 {% for network in filter.qs %}
-<tr style="height: 30px;">
-  <td width="120px"><a href="{% url 'ipv4_detail' pk=network.pk %}">{{ network.network }}</a></td>
+<tr>
+  <td><a href="{% url 'ipv4_detail' pk=network.pk %}">{{ network.network }}</a></td>
   <td>{{ network.status|linebreaksbr }}</td>
+  {% if network.segment != None %}
+    <td>{{ network.segment|linebreaksbr }}</td>
+  {% elif network.segment == None %}
+    <td>Не выбран</td>
+  {% endif %}
   <td>{{ network.comment|linebreaksbr }}</td>
+
   {% if network.tocore != None %}
   <td>{{ network.tocore|linebreaksbr}}</td>
   {% elif network.topop != None %}
@@ -71,11 +52,15 @@
   <td>{{ network.tocustomer|linebreaksbr}}</td>
   {% endif %}
   {% if network.status == "FREE" %}
-      {% if user.is_authenticated %}
   <td>
-    <input class="filterbutton" type="button" value="РАЗДЕЛИТЬ" onclick="location.href='{% url 'ipv4_sepor' pk=network.pk %}'">
+    {% if user.is_authenticated %}
+      {% for group in  request.user.groups.all %}
+        {%  if 'noc' == group.name %}
+    <input class="btn btn-outline-dark btn-sm" style="height: 32px; width: 92px;" type="button" value="РАЗДЕЛИТЬ" onclick="location.href='{% url 'ipv4_sepor' pk=network.pk %}'">
+        {% endif %}
+      {% endfor %}
+    {% endif %}
   </td>
-      {% endif %}
   {% endif %}
 </tr>
 {% endfor %}
