--- a/inventory/static/css/styles.css
+++ b/inventory/static/css/styles.css
@@ -1,171 +1,153 @@
-body {
-	color: #8f8f8f;
-	font: 12px Tahoma, sans-serif;
-	background-color: #f8f8f8;
-	margin: 0;
-}
-input[type="text"] {
-	background-color: #f3f3f3;
-	border: 1px solid #e7e7e7;
-	height: 30px;
-	color: #b2b2b2;
-	padding: 0 10px;
-	vertical-align: top;
-}
-button {
-	color: #fff;
-	background-color: #FF9900;
-	border: none;
-	height: 32px;
-	width: 72px;
-	font-family: 'Oswald', sans-serif;
+.top-bar {
+    background: #222222;
+    color: #fff;
+    font-size: 0.9rem;
+    padding: 10px 0;
 }
 
-p {
-	margin: 20px 0;
-}
-#wrapper {
-	max-width: 1300px;
-	margin: auto;
+.top-bar a.login-btn i, .top-bar a.signup-btn i {
+    margin-right: 10px;
+
 }
 
-
-
-nav a {
-	text-decoration: none;
+.top-bar a.login-btn, .top-bar a.signup-btn {
+    color: #eee;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    text-decoration: none !important;
+    font-size: 0.75rem;
+    font-weight: 700;
+    margin-right: 10px;
 }
 
-nav ul {
-	margin: 0;
-	padding: 0;
+.navbar{background:#444444; border-top: 1px solid #FD5025;}
+.nav-item::after{content:'';display:block;width:0px;height:2px;background:#fec400;transition: 0.2s;}
+.nav-item:hover::after{width:100%;}
+.navbar-dark .navbar-nav .active > .nav-link, .navbar-dark .navbar-nav .nav-link.active, .navbar-dark .navbar-nav .nav-link.show, .navbar-dark .navbar-nav .show > .nav-link,.navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover{color:#fec400;}
+.nav-link{padding:15px 5px;transition:0.2s;}
+
+input class.btn {
+  height: 32px;
+  width: 72px;
+  float: right;
 }
 
-nav li {
-	list-style-position: inside;
-	font: 14px 'Oswald', sans-serif;
-	padding: 10px;
-}
-
-.top-menu li {
-	display: inline-block;
-	padding: 10px 30px;
-	margin: 0;
-}
-
-.top-menu li.active {
-	background: #FF9900;
-	color: #fff;
-	font-weight: bolder;
-}
-
-.top-menu li:hover {
-	color: #fff;
-	background: #FF9900;
-	font-weight: bolder;
-}
-.top-menu a:hover {
-	color: #ffffff;
-}
-
-.top-menu a {
-	color: #b2b2b2;
-}
-
-aside {
-	float: left;
-	width: 250px;
-}
-section {
-	margin-left: 280px;
-	padding-bottom: 50px;
-}
-
-section h4{
-	font-size: 15px:
-}
-
-section h4 a{
-	text-decoration: none;
-	font-size: 15px;
-}
-
-section h4 a:hover{
-	text-decoration: underline;
-	font-size: 15px;
-}
-
-.aside-menu li {
-	font-weight: 300;
-	list-style-type: square;
-  border-top: 1px solid #e7e7e7;
-}
-
-.aside-menu li:first-child {
-	border: none;
-}
-
-.aside-menu li.active {
-	color: #000000;
-	font-weight: bolder;
-}
-
-.aside-menu li:hover {
-	color: #000000;
-	font-weight: bolder;
-}
-
-.aside-menu a {
-	color: #8f8f8f;
-}
-.aside-menu a:hover {
-	color: #000000;
-	font-weight: bolder;
-}
 
 footer {
-	background: #666666;
-	color: #dbdbdb;
-	font-size: 11px;
-	max-width: 1300px;
-	height: 90px;
-	margin: auto;
+    border-top: 1px solid #FD5025;
+    background-color: #eee;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
-
-
-footer a {
-	color: #dbdbdb;
+footer ul, li {
+    list-style-type: none;
 }
 
-#sitemap {
-	width: 150px;
-	float: left;
-	padding-right: 10px;
+footer .list {
+    margin-top: 10px;
 }
 
-#sitemap div {
-	display: inline-block;
+a {
+    text-shadow: none;
+    color: #0d638f;
+}
+ul {
+    margin: 0px;
+    padding: 0px;
+}
+.ace-responsive-menu {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    background: #333;
+    float:left;
+    width:100%;
+    font-family: 'Roboto', sans-serif;
+}
+.ace-responsive-menu li{
+    list-style: none;
+}
+.ace-responsive-menu li ul {
+    display:none;
+}
+.ace-responsive-menu > li {
+    display: block;
+    margin: 0;
+    padding: 0;
+    border: 0px;
+    float: left;
+}
+.ace-responsive-menu li a {
+        color:#c0c0c0;
+}
+.ace-responsive-menu > li > a {
+    display: block;
+    position: relative;
+    margin: 0;
+    border: 0px;
+    padding: 18px 20px 18px 12px;
+    text-decoration: none;
+    font-size: 15px;
+    font-weight: 300;
+    color: #c0c0c0;
+}
+.ace-responsive-menu li a i {
+    padding-right: 5px;
+    color: #FF5737;
+}
+.ace-responsive-menu > li > a i {
+    font-size: 16px;
+    text-shadow: none;
+    color: #FF5737;
 }
 
-#sitemap div + div {
-	margin-left: 10px;
+.ace-responsive-menu li.menu-active > a {
+    background: #272727 !important;
+    color:#fff;
+}
+.ace-responsive-menu li .menu-active {
+    position: relative;
 }
 
-#sitemap a {
-	display: block;
-	text-decoration: none;
-	font-size: 12px;
-	margin-bottom: 5px;
+/* Vertical Menu Styles
+----------------------------------------*/
+
+ul[data-menu-style="vertical"] {
+    width: 100%;
+}
+ul[data-menu-style="vertical"] > li {
+    float: none;
 }
 
-#sitemap a:hover {
-	text-decoration: underline;
+ul[data-menu-style="vertical"] li ul.sub-menu > li {
+    width: 100%;
+}
+ul[data-menu-style="vertical"] > li > a > .arrow:before {
+    float: right;
+    content: "\f105";
+}
+ul[data-menu-style="vertical"] > li.menu-active {
+position:relative;
 }
 
-#copyright {
-	float: right;
-	margin-top: 20px;
-	margin-bottom: 5px;
-	font-size: 12px;
-	text-align: right;
+ul[data-menu-style="vertical"] > li > a i {
+    padding-right: 10px;
+    color: #FF5737;
+}
+ul[data-menu-style="vertical"]> li > {
+    position: absolute;
+    width:200px;
+    left: 200px;
+}
+ul[data-menu-style="vertical"] > li > {
+    position: absolute;
+    width:200px;
+    left: 200px;
+}
+ul[data-menu-style="vertical"] > li {
+    border-bottom: 1px solid #242424;
+}
+ul[data-menu-style="vertical"] li a:hover {
+    background: #272727 !important;
 }
